<resources>
    <string name="app_name">CriminalIntent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_autofill_hint">Coffee cup thief</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>
    <string name="crime_title">Crime Title</string>
    <string name="crime_date_and_time">Crime Date and Time</string>
    <string name="contact_police">Contact Police</string>
    <string name="crime_is_solved">Crime is solved.</string>
    <string name="requires_police_label">Requires police</string>
    <string name="new_crime">New Crime</string>
    <string name="no_crime_added_yet">No crimes added yet.</string>
    <string name="add_crime">Add Crime</string>
    <string name="crime_suspect_text">Choose Suspect</string>
    <string name="crime_report_text">Send Crime Report</string>
    <string name="crime_report">Crime title: %1s!\nThe crime was discovered on %2s at %3s.\n%4s but %5s, and %6s</string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">Unfortunately, the case is not solved</string>
    <string name="crime_report_police_required">requires police</string>
    <string name="crime_report_no_police">doesn\'t require police</string>
    <string name="crime_report_no_suspect">there is no suspect.</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
    <string name="suspect">Suspect: %s</string>
    <string name="call_suspect">Call suspect</string>
    <string name="crime_picture">Crime picture</string>
    <string name="crime_photo">Crime Photo</string>
    <string name="police_button_text">If the call connect, you no go shock?</string>
    <string name="no_contact_app">No Contact app found!\nDownload a Contact app first.</string>
    <string name="no_suspect">No suspect to call!</string>
    <string name="no_camera_app">No Camera app found!\nDownload a Camera app first.</string>
    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>
    <string name="date_label">Date</string>
    <string name="time_label">Time</string>
    <string name="suspect_label">Suspect</string>
    <string name="contact_permission_request">Contact access is required to fetch number.</string>
    <string name="crime_date_and_crime_time">%1s at %2s</string>
    <string name="delete_all">Delete All</string>
    <string name="delete">Delete Crime</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete_everything">Delete everything</string>
    <string name="delete_everything_text">This action cannot be undone.\nDo you wish to continue?</string>
    <string name="delete_crime">Delete crime</string>
    <string name="delete_crime_text">Are you sure you want to delete \'%s\'?</string>
    <string name="deleted">Successfully deleted</string>
</resources>